# CrabCord

./: Cargo.toml  readme.md
client/: Cargo.toml
client/src/: main.rs
public/: image.md
server/: .env  Cargo.toml  api_docs.md  channel.json  docker-compose.yml  login.json  register.json  server.json
server/migrations/: 20240520120000_initial_schema.sql
server/src/: auth.rs  extractor.rs  helpers.rs  main.rs  models.rs  state.rs  voice.rs
