[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["ws"] }
argon2 = "0.5"
jsonwebtoken = "9"
rand_core = {version = "0.6", features = ["std"]}
rand = "0.8"
tower_governor = "0.4"
validator = { version = "0.18", features = ["derive"] }
